# AeroBIM

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  KNOWN_BUGS.md  LICENSE  MAINTAINERS.md  README.md  README.ru.md  RELEASE_POLICY.md  SECURITY.md  SUPPORT.md  docker-compose.production.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  LOCKFILE.md  pyproject.toml  pyrightconfig.json  requirements-dev-lock.txt  requirements-lock.txt
backend/llm/: README.md
backend/llm/artifacts/eval/: smoke_eval_report_v1.json
backend/llm/artifacts/serve/: smoke_serve_report_v1.json
backend/llm/artifacts/train/: smoke_train_report_v1.json
backend/llm/configs/: aerobim_spec_extraction_ft_config_v1.json
backend/llm/datasets/: manifest_v1.json  sft_holdout_v1.jsonl  sft_train_v1.jsonl  sft_val_v1.jsonl  split_policy_v1.md
backend/llm/eval/: smoke_eval.py
backend/llm/serve/: smoke_serve.py
backend/llm/train/: smoke_train.py
backend/scripts/: export_openapi.py
backend/src/aerobim/: __init__.py  main.py
backend/src/aerobim/core/: __init__.py
backend/src/aerobim/domain/: __init__.py  ai_tool_registry.py  annotation_ifc_matching.py  architecture.py  bcf_api.py  cad_ingest.py  compliance_agent.py  consistency.py  drawing_coordinate_system.py  drawing_region_hitl.py  errors.py  finding_provenance.py  finding_revision_compare.py  findings.py  ifc_globalid.py  ifc_spatial_index.py  ingestion.py  job_transitions.py  mep.py  models.py  norm_assist.py  norm_pack_hash.py  object_acl.py  package_outcome.py  package_trace.py  persistence.py  ports.py  quantity.py  rase.py  review_priority.py  review_state_machine.py  run_manifest.py  section_pairing.py  stage_timeout.py  system_capabilities.py  tz_architecture_ports.py
backend/src/aerobim/infrastructure/: __init__.py
backend/src/aerobim/tools/: __init__.py  audit_issue_traceability.py  benchmark_project_package.py  benchmark_threshold_gate.py  build_detection_labels.py  check_markdown_links.py  evaluate_detection_precision.py  evaluate_extraction.py  evaluate_ifc_qa.py  export_api_contract_summary.py  export_detections_from_report.py  export_evidence_bundle.py  export_finding_revision_delta.py  export_ft_scaffold_gate.py  export_runtime_baseline.py  generate_benchmark_report.py  generate_tz_matrix_status.py  map_typical_errors.py  measure_adjudicator_agreement.py  measure_package_sla.py  openrebar_provenance_digest.py  profile_package_trace.py  reconcile_audit_orphans.py  run_ablation_study.py  run_demo_path.py  run_live_review_smoke.py  seed_smoke_report.py  summarize_conflict_breakdown.py  (+2 more)
backend/src/samolet/: __init__.py  main.py
backend/tests/: test_academic_bsdd_loin.py  test_academic_quantity_cross_doc.py  test_adr_002_open_core.py  test_ai_tool_registry.py  test_analyze_project_package.py  test_analyze_project_package_drawing_asset_integration.py  test_analyze_project_package_job_store.py  test_api_object_acl.py  test_api_security.py  test_apply_norm_rule_hitl_event.py  test_architecture_seams.py  test_audit_issue_traceability.py  test_bcf3_exporter.py  test_bcf_evidence_ladder.py  test_bcf_export_and_clash.py  test_bcf_multi_consumer_contract.py  test_benchmark_project_package.py  test_benchmark_threshold_gate.py  test_build_detection_labels.py  test_cad_office_ingest.py  test_combat_backends_i1_i9.py  test_compliance_agent.py  test_consistency_ports.py  test_container.py  test_cross_document_detection.py  test_determinism_gate.py  test_docling_requirement_extractor.py  test_document_identity_ingestion.py  test_drawing_region_hitl.py  test_drawing_sheet_identity.py  test_edge_cases.py  test_enterprise_storage_foundation.py  test_evaluate_detection_precision.py  test_export_evidence_bundle.py  test_export_ft_scaffold_gate.py  test_extraction_benchmark.py  test_federated_mep_scope.py  test_filesystem_audit_store.py  test_filesystem_audit_store_drawing_assets.py  test_finding_predicates.py  (+79 more)
(+503 files in other folders)
