[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samolet-backend"
version = "0.1.0"
description = "OpenBIM IFC/IDS quality backend extracted from MicroPhoenix architectural patterns"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "ifcopenshell>=0.8.4",
  "ifctester>=0.8.4",
  "starlette>=0.41",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.27",
  "ruff>=0.7,<1.0",
  "mypy>=1.12,<2.0",
]
clash = [
  "ifcclash>=0.8.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
