[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerobim-backend"
version = "0.1.0"
description = "AeroBIM backend for cross-modal IFC, IDS, drawing, and specification validation"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "ifcopenshell>=0.8.4",
  "ifctester>=0.8.4",
  "starlette>=0.41",
]

[project.urls]
Homepage = "https://github.com/KonkovDV/AeroBIM"
Repository = "https://github.com/KonkovDV/AeroBIM"
Issues = "https://github.com/KonkovDV/AeroBIM/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28.1",
  "ruff>=0.7,<1.0",
  "mypy>=1.12,<2.0",
]
clash = [
  "ifcclash>=0.8.4",
]
docling = [
  "docling>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
